// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader should match a snapshot when BODY false 1`] = `
<div
  className="loader-spinner "
  data-test="some-selector"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Loader should match a snapshot when BODY true 1`] = `
<div
  className="loader-spinner body"
  data-test="some-selector"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
